cabal-version:       >=1.10
name:                reflex-dom-tree
version:             0.1.0.0
author:              Alexandre Esteves
maintainer:          alexandre.fmp.esteves@gmail.com
build-type:          Simple

library
  exposed-modules:  Reflex.Dom.Tree
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
                     , containers
                     , reflex-dom-core
                     , text
  -- hs-source-dirs:
  default-language:    Haskell2010

test-suite trees
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: trees.hs
  hs-source-dirs: test
  build-depends: base
               , containers
               , reflex-dom-core
               , reflex-dom-tree
               , text
